# difflux

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: README.md
docs/personas/: _template.md  author.md  reviewer.md
docs/research/: user-research.md
docs/user-stories/: _template.md  author-stories.md  reviewer-stories.md
src/difflux/: __main__.py  cli.py  clusterer.py  config.py  config_file.py  enrich.py  format.py  hunks.py  prompt.py  render_text.py
src/difflux/sources/: github.py  stdin.py
src/difflux/tui/: _shared.py  app.py  drilldown.py  key_entry.py  overview.py  setup.py  widgets.py
src/scc/: __main__.py  cli.py  clusterer.py  config.py  enrich.py  models.py  prompt.py  render_text.py
src/scc/sources/: github.py
src/scc/tui/: app.py  drilldown.py  overview.py  widgets.py
tests/: test_cli.py  test_clusterer.py  test_config_file.py  test_enrich.py  test_format.py  test_hunks.py  test_models.py  test_prompt.py  test_setup.py  test_tui_overview.py
tests/fixtures/: diff2_editorial.diff
