[project]
name = "difflux"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.60",
    "anthropic>=0.40",
    "openai>=1.0",
    "pydantic>=2.6",
    "httpx>=0.27",
]

[project.scripts]
difflux = "difflux.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/difflux"]
